chore: add auth to sessions routes
